--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,6 @@
     <string name="nav_notifications">Notifications</string>
     <string name="nav_profile">Profile</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Profile Fragment-->
@@ -34,5 +33,8 @@
     <string name="save_changes">Save Changes</string>
     <string name="Light_Theme">Light Theme</string>
     <string name="Dark_Theme">Dark Theme</string>
+
+    <!-- Dialog -->
+
 
 </resources>
